--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ par {
   padding: 20px;
   list-style-type: none;
   background-color: #9F84BD;
-  color: #ffd60a;
+  color: #FFFFFF;
   width: 100%;
   overflow: hidden;
   position: fixed;
@@ -23,14 +23,14 @@ a {
   text-align: center;
   fony-family: "Helvetica", Sans-Serif;
   display: block;
-  color: #ffd60a;
+  color: #FFFFFF;
   letter-spacing: 0.5px;
   padding: 0px 50px; 
 }
 
 h1 {
   text-decoration: none;
-  color: #ffd60a;
+  color: #FFFFFF;
   font-size: 300%;
   letter-spacing: 3px;
   text-align: center;
@@ -44,7 +44,7 @@ li {
 }
 
 li a: hover {
-  background-color: #9F84BD;
+  background-color: #006994;
   color: blue;
 }
 
