--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
-  background-color: #9F84BD;
-  color: #ffd60a;
+  background-color: #006994;
+  color: #FFFFFF;
 }
 
 par {
   padding: 20px;
   list-style-type: none;
-  background-color: #9F84BD;
+  background-color: #006994;
   color: #FFFFFF;
   width: 100%;
   overflow: hidden;
